--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
+$color-primario: #5573C6
+$color-secundario: #373F51
+$color-acento-contenido: #AFAFAF
+$color-acento-botones: #F4A338
 $color-adicional-1: #CDDC39
 $color-adicional-2: #00BCD4
 
